apps/mozi/envs/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mozi
  namespace: mozi
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: web
          image: ghcr.io/wlodzimierrr:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
